fixed scrollbar shifting content when appears on page

--- a/public/stylesheets/less/rp-content.less
+++ b/public/stylesheets/less/rp-content.less
@@ -47,6 +47,10 @@ html {
     // overflow-y: visible !important;
 }
 
+.rp-content-scroll {
+    overflow-y: scroll;
+}
+
 #rp-dialog-anchor {
     position: fixed;
     bottom: 0;
